<resources>
    <string name="app_name">TPAndroid</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_liste_serveurs">Mes serveurs</string>
    <string name="title_activity_liste_produits">Carte du restaurant</string>

    <!-- Strings related to home -->
    <string name="txt_welcome">Bienvenue</string>
    <string name="txt_welcomeDetails">Veuillez sélectionner \"S\'enregistrer\" pour créer un compte, ou \"se connecter\" si vous en avez déjà un.</string>
    <string name="btn_signup">S\'enregistrer</string>
    <string name="btn_signin">Se connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_confirm_password">Les deux mots de passe ne correspondent pas</string>
    <string name="error_invalid_phone">Un numéro est composé de 10 chiffres</string>
    <string name="error_invalid_empty">Veuillez remplir ce champ</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txt_signin_warning">Merci de vous connecter pour accéder à l\'application</string>
    <string name="txt_forgot_password">Mot de passe oublié ?</string>

    <!-- Strings related to register -->
    <string name="txt_register_infos">Veuillez saisir vos informations</string>
    <string name="edit_text_register_nom">Votre nom</string>
    <string name="edit_text_register_prenom">Votre prénom</string>
    <string name="edit_text_register_phone">Téléphone portable</string>
    <string name="edit_text_register_email">E-mail</string>
    <string name="edit_text_register_password">Mot de passe</string>
    <string name="edit_text_register_password_confirm">Confirmation mot de passe</string>
    <string name="radio_button_register_masculin">Masculin</string>
    <string name="radio_button_register_feminin">Féminin</string>
    <string name="btn_register_register">S\'enregistrer</string>

    <!-- Strings related to menu -->
    <string name="txt_menu_bienvenue">Bienvenue</string>
    <string name="lbl_btn_list_product_add">&#032;&#032;Ajouter au menu&#032;&#032;</string>

    <!-- Strings related to delete popup -->
    <string name="delete_serveur">Validation suppression serveur</string>
    <string name="really_delete">Voulez vous vraiment supprimer ce serveur ?</string>
    <string name="yes">Oui</string>
    <string name="no">Annuler</string>
    <string name="btn_view_detail_produit_ajouter_panier">&#032;&#032;Ajouter au menu&#032;&#032;</string>
    <string name="lbl_txt_view_detail_produit">Résumé</string>
    <string name="txt_detail_produit_calories">Calories :\n</string>
    <string name="txt_detail_produit_discount">Réduction :\n</string>
    <string name="txt_detail_produit_type">Type :\n</string>
    <string name="txt_detail_produit_prix">Réduction :\n</string>
    <string name="btn_view_liste_produits_complete">&#032;&#032;Valider la commande&#032;&#032;</string>
    <string name="txt_menu_basket">Panier</string>
    <string name="title_activity_liste_commande">Résumé de la commande</string>
    <string name="btn_valider_commande">&#032;&#032;Valider la commande&#032;&#032;</string>
</resources>
