<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.unice.mbds.tp1.tpandroid.RegisterActivity">


    <TextView
        android:id="@+id/txt_view_register_info"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_margin="10dp"

        android:text="@string/txt_register_infos"
        android:textSize="14dp"
        android:textColor="@color/cyan"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_text_register_nom"
        android:ems="10"
        android:id="@+id/edit_text_register_nom"
        android:layout_below="@+id/txt_view_register_info"
        android:background="@drawable/shape_radius_translucid_grey"
        android:textColor="@color/grey"

        android:padding="8dp"
        android:layout_margin="4dp"

        android:drawableLeft="@android:drawable/ic_menu_myplaces" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_text_register_prenom"
        android:ems="10"
        android:id="@+id/edit_text_register_prenom"
        android:layout_below="@+id/edit_text_register_nom"
        android:background="@drawable/shape_radius_translucid_grey"
        android:textColor="@color/grey"

        android:padding="8dp"
        android:layout_margin="4dp"

        android:drawableLeft="@android:drawable/ic_menu_myplaces"/>

    <RadioGroup
        android:id="@+id/radio_grp_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_text_register_prenom"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/radio_button_register_masculin"
            android:id="@+id/radio_button_register_masculin"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/radio_button_register_feminin"
            android:id="@+id/radio_button_register_feminin"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/edit_text_register_phone"
        android:ems="10"
        android:id="@+id/edit_text_register_phone"
        android:layout_below="@+id/radio_grp_register"
        android:background="@drawable/shape_radius_translucid_grey"
        android:textColor="@color/grey"

        android:padding="8dp"
        android:layout_margin="4dp"

        android:drawableLeft="@android:drawable/sym_action_call"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/edit_text_register_email"
        android:ems="10"
        android:id="@+id/edit_text_register_email"
        android:layout_below="@+id/edit_text_register_phone"
        android:background="@drawable/shape_radius_translucid_grey"
        android:textColor="@color/grey"

        android:padding="8dp"
        android:layout_margin="4dp"
        android:drawableLeft="@android:drawable/sym_action_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/edit_text_register_password"
        android:ems="10"
        android:id="@+id/edit_text_register_password"
        android:layout_below="@+id/edit_text_register_email"
        android:background="@drawable/shape_radius_translucid_grey"
        android:textColor="@color/grey"

        android:padding="8dp"
        android:layout_margin="4dp"
        android:drawableLeft="@android:drawable/ic_lock_lock"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/edit_text_register_password_confirm"
        android:ems="10"
        android:id="@+id/edit_text_register_password_confirm"
        android:layout_below="@+id/edit_text_register_password"
        android:background="@drawable/shape_radius_translucid_grey"
        android:textColor="@color/grey"

        android:padding="8dp"
        android:layout_margin="4dp"

        android:drawableLeft="@android:drawable/ic_lock_lock"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_register"
        android:id="@+id/button"
        android:layout_below="@+id/edit_text_register_password_confirm"
        android:textColor="@color/white"
        android:background="@drawable/shape_radius_opaque_cyan"

        android:layout_margin="4dp"/>


</RelativeLayout>
