<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="289dp"
        android:layout_height="149dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/phoenix" />

    <TextView
        android:id="@+id/txt_welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_welcome"
        android:textColor="@color/cyan"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_welcomeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_welcomeText"
        android:text="@string/txt_welcomeDetails"
        android:textAlignment="center"
        android:textColor="@color/cyan"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_welcomeDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_radius_opaque_cyan"
        android:onClick="register"
        android:text="@string/btn_signup"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_radius_opaque_white"
        android:onClick="signin"
        android:text="@string/btn_signin"
        android:textColor="@color/cyan" />
</RelativeLayout>
